--- a/src/frontend/TopBar.ui
+++ b/src/frontend/TopBar.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>156</width>
-    <height>26</height>
+    <width>130</width>
+    <height>27</height>
    </rect>
   </property>
   <property name="maximumSize">
@@ -36,44 +36,6 @@
      <height>16777215</height>
     </size>
    </property>
-   <widget class="QPushButton" name="buttonAbout">
-    <property name="geometry">
-     <rect>
-      <x>104</x>
-      <y>0</y>
-      <width>27</width>
-      <height>27</height>
-     </rect>
-    </property>
-    <property name="minimumSize">
-     <size>
-      <width>0</width>
-      <height>0</height>
-     </size>
-    </property>
-    <property name="toolTip">
-     <string>Help</string>
-    </property>
-    <property name="icon">
-     <iconset resource="images.qrc">
-      <normaloff>:/images/about.png</normaloff>:/images/about.png</iconset>
-    </property>
-    <property name="iconSize">
-     <size>
-      <width>12</width>
-      <height>12</height>
-     </size>
-    </property>
-    <property name="autoDefault">
-     <bool>false</bool>
-    </property>
-    <property name="default">
-     <bool>false</bool>
-    </property>
-    <property name="flat">
-     <bool>false</bool>
-    </property>
-   </widget>
    <widget class="QPushButton" name="buttonSetLayout">
     <property name="geometry">
      <rect>
@@ -88,7 +50,16 @@
     </property>
     <property name="icon">
      <iconset resource="images.qrc">
-      <normaloff>:/images/keyboard_layout_viewer.png</normaloff>:/images/keyboard_layout_viewer.png</iconset>
+      <normaloff>:/images/outline_keyboard_hide_black_24dp.png</normaloff>:/images/outline_keyboard_hide_black_24dp.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>24</width>
+      <height>24</height>
+     </size>
+    </property>
+    <property name="checkable">
+     <bool>true</bool>
     </property>
    </widget>
    <widget class="QPushButton" name="buttonViewLayout">
@@ -105,7 +76,13 @@
     </property>
     <property name="icon">
      <iconset resource="images.qrc">
-      <normaloff>:/images/keyboard_layout.png</normaloff>:/images/keyboard_layout.png</iconset>
+      <normaloff>:/images/outline_keyboard_black_24dp.png</normaloff>:/images/outline_keyboard_black_24dp.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>24</width>
+      <height>24</height>
+     </size>
     </property>
    </widget>
    <widget class="QPushButton" name="buttonSettings">
@@ -122,13 +99,19 @@
     </property>
     <property name="icon">
      <iconset resource="images.qrc">
-      <normaloff>:/images/settings.png</normaloff>:/images/settings.png</iconset>
+      <normaloff>:/images/outline_settings_black_24dp.png</normaloff>:/images/outline_settings_black_24dp.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>24</width>
+      <height>24</height>
+     </size>
     </property>
    </widget>
    <widget class="QPushButton" name="buttonShutdown">
     <property name="geometry">
      <rect>
-      <x>130</x>
+      <x>104</x>
       <y>0</y>
       <width>27</width>
       <height>27</height>
@@ -139,7 +122,13 @@
     </property>
     <property name="icon">
      <iconset resource="images.qrc">
-      <normaloff>:/images/shutdown.png</normaloff>:/images/shutdown.png</iconset>
+      <normaloff>:/images/outline_close_black_24dp.png</normaloff>:/images/outline_close_black_24dp.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>24</width>
+      <height>24</height>
+     </size>
     </property>
    </widget>
    <widget class="QPushButton" name="buttonIcon">
